# sugarcube

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/sc_ast/: Cargo.toml
crates/sc_ast/src/: lib.rs
crates/sc_cli/: Cargo.toml
crates/sc_cli/src/: main.rs
crates/sc_desugar/: Cargo.toml
crates/sc_desugar/src/: cons.rs  desugar.rs  hkt.rs  lib.rs  pipeline.rs
crates/sc_lexer/: Cargo.toml
crates/sc_lexer/src/: lib.rs
crates/sc_parser/: Cargo.toml
crates/sc_parser/src/: lib.rs  parse.rs  preprocess.rs
crates/sc_parser/src/preprocess/: hkt_pass.rs  operator_pass.rs  util.rs
crates/sc_test/: Cargo.toml
crates/sc_test/src/: lib.rs
docs/: architecture.md  contributing.md  integration.md  rebasing-upstream.md  syntax-reference.md
tests/: harness.rs
tests/fixtures/cons/: basic.input.ts  chained.input.ts  computed_value.expected.ts  computed_value.input.ts  empty_array.expected.ts  function_call_head.expected.ts  function_call_head.input.ts  precedence_arithmetic.expected.ts  precedence_arithmetic.input.ts  precedence_pipeline.expected.ts  precedence_pipeline.input.ts  property_access.expected.ts  property_access.input.ts  quadruple.expected.ts  quadruple.input.ts  triple.expected.ts  with_array.expected.ts  with_array.input.ts  with_method_call.expected.ts  with_method_call.input.ts
tests/fixtures/edge-cases/: bitwise_or_vs_pipeline.expected.ts  bitwise_or_vs_pipeline.input.ts  cons_in_string.input.ts  cons_in_template.input.ts  emoji_near_operators.expected.ts  emoji_near_operators.input.ts  escaped_backtick_template.expected.ts  escaped_backtick_template.input.ts  logical_or_vs_pipeline.expected.ts  logical_or_vs_pipeline.input.ts  multiline_pipeline.expected.ts  multiline_pipeline.input.ts  nullish_coalescing.expected.ts  nullish_coalescing.input.ts  pipe_after_line_comment.expected.ts  pipe_after_line_comment.input.ts  pipe_in_block_comment.input.ts  pipe_in_comment.input.ts  pipe_in_string.expected.ts  pipe_in_template_expr.expected.ts  pipe_in_template_expr.input.ts  pipe_then_comparison.expected.ts  pipe_then_comparison.input.ts  regex_and_pipeline.expected.ts  regex_and_pipeline.input.ts  regex_with_pipe.expected.ts  template_literal_cons.expected.ts  template_literal_cons.input.ts  template_literal_mixed.expected.ts  template_literal_mixed.input.ts  template_literal_pipeline.expected.ts  template_literal_pipeline.input.ts  ternary_not_cons.expected.ts  unicode_identifiers.expected.ts  unicode_identifiers.input.ts  whitespace_only.input.ts
tests/fixtures/hkt/: apply.expected.ts  bifunctor.expected.ts  bifunctor.input.ts  braceless_arrow.expected.ts  braceless_arrow.input.ts  braceless_scope_isolation.expected.ts  braceless_scope_isolation.input.ts  functor.expected.ts  functor.input.ts  mixed_params.expected.ts  mixed_params.input.ts  multiple_params.expected.ts  multiple_params.input.ts  nested_generics.expected.ts  nested_generics.input.ts  nested_hkt.expected.ts  nested_hkt.input.ts  newlines_in_usage.input.ts  no_hkt_unchanged.expected.ts  no_hkt_unchanged.input.ts  non_hkt_generic_unchanged.expected.ts  non_hkt_generic_unchanged.input.ts  real_world_functor.expected.ts  real_world_functor.input.ts  scope_isolation.expected.ts  scope_isolation.input.ts  semicolon_terminated.expected.ts  semicolon_terminated.input.ts  type_alias.input.ts  whitespace_in_decl.expected.ts  whitespace_in_decl.input.ts  whitespace_in_usage.expected.ts  whitespace_in_usage.input.ts
tests/fixtures/mixed/: all_extensions.expected.ts  all_extensions.input.ts  cons_then_pipeline.expected.ts  cons_then_pipeline.input.ts  hkt_and_cons.expected.ts  hkt_and_cons.input.ts  hkt_and_pipeline.expected.ts  hkt_and_pipeline.input.ts  list_construction.expected.ts  mixed_chains.input.ts  (+6 more)
(+38 files in other folders)
