[package]
name = "sc_parser"
description = "TypeScript parser with sugarcube syntax extensions (|>, ::, F<_>)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sc_ast = { workspace = true }
sc_lexer = { workspace = true }
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
anyhow.workspace = true
